--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "amortization": "^1.1.1",
     "bootstrap": "^5.0.0-beta2",
     "classnames": "^2.2.6",
+    "financejs": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
